--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,13 +31,15 @@ dist.jar=${dist.dir}/Financiera.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.xpp3-1.1.3_8.jar=src/financiera/librerias/xpp3-1.1.3_8.jar
-file.reference.xstream-1.4.11-java7.jar=src/financiera/librerias/xstream-1.4.11-java7.jar
+file.reference.commons-logging-1.2.jar=src/financiera/librerias/commons-logging-1.2.jar
+file.reference.fontbox-1.8.16.jar=src/financiera/librerias/fontbox-1.8.16.jar
+file.reference.pdfbox-1.8.16.jar=src/financiera/librerias/pdfbox-1.8.16.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.xstream-1.4.11-java7.jar}:\
-    ${file.reference.xpp3-1.1.3_8.jar}
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.fontbox-1.8.16.jar}:\
+    ${file.reference.pdfbox-1.8.16.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
