Tests para Credito

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,13 +33,15 @@ endorsed.classpath=
 excludes=
 file.reference.commons-logging-1.2.jar=src/financiera/librerias/commons-logging-1.2.jar
 file.reference.fontbox-1.8.16.jar=src/financiera/librerias/fontbox-1.8.16.jar
+file.reference.mockito-core-3.1.13.jar=src/financiera/librerias/mockito-core-3.1.13.jar
 file.reference.pdfbox-1.8.16.jar=src/financiera/librerias/pdfbox-1.8.16.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.fontbox-1.8.16.jar}:\
-    ${file.reference.pdfbox-1.8.16.jar}
+    ${file.reference.pdfbox-1.8.16.jar}:\
+    ${file.reference.mockito-core-3.1.13.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
